submodules: add meta-freescale-ml
For machine learning examples for i.MX add layer from
Freescale Community BSP: https://github.com/Freescale/meta-freescale-ml.git

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = sources/meta-qt5
 	url = https://github.com/meta-qt5/meta-qt5.git
 	branch = kirkstone
+[submodule "sources/meta-freescale-ml"]
+	path = sources/meta-freescale-ml
+	url = https://github.com/Freescale/meta-freescale-ml.git
+	branch = kirkstone
