templates: prepare usage of meta-freescale-ml for imx config
Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/sources/template/conf/templates/imx/bblayers.conf.sample
+++ b/sources/template/conf/templates/imx/bblayers.conf.sample
@@ -13,6 +13,7 @@ BBLAYERS = "\
     ${BSPDIR}/sources/meta-openembedded/meta-multimedia \
     \
     ${BSPDIR}/sources/meta-freescale \
+    ${BSPDIR}/sources/meta-freescale-ml \
     \
     ${BSPDIR}/sources/meta-qt5 \
     \
