--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -178,7 +178,7 @@ def sendMail() {
  */
 pipeline {
     agent {
-        label 'yocto-kirkstone'
+        label 'yocto-scarthgap'
     }
 
     options {
