--- a/.gitmodules
+++ b/.gitmodules
@@ -29,4 +29,4 @@
 [submodule "sources/meta-freescale-ml"]
 	path = sources/meta-freescale-ml
 	url = https://github.com/Freescale/meta-freescale-ml.git
-	branch = kirkstone
+	branch = master
